--- a/train-ticketing-start/src/main/resources/application.yml
+++ b/train-ticketing-start/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     hikari:
       maximum-pool-size: 20  # Số lượng tối đa kết nối
       minimum-idle: 5        # Số lượng kết nối tối thiểu trong pool
-    url: jdbc:mysql://localhost:3316/vetautet
+    url: jdbc:mysql://localhost:3316/train_ticketing
     username: root
     password: root1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -82,3 +82,5 @@ management:
   endpoint:
     health:
       show-details: always
+    prometheus:
+      enabled: true
