--- a/train-ticketing-start/pom.xml
+++ b/train-ticketing-start/pom.xml
@@ -23,6 +23,17 @@
             <artifactId>train-ticketing-controller</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.13.6</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
